--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -4,6 +4,8 @@
 
 本课程是Linux系统基础的进阶课程，主要讲述Linux系统编程，并包括部分Web的内容，Web部分主要是Linux服务端搭建、Web架构与特点，系统编程部分主要使用C语言调用Linux系统接口（系统API）完成一些命令，由此更深入的理解Linux工作方式，并体会Linux/Unix平台的简洁、分工、组合的编程思想（KISS原则：Keep it small , stupid）。
 
+本课程以编程实践为主，涉及到man查看的手册内容，并非全部内容，而是精简了一些系统API或是库函数的主要说明。你应该在需要时查看完整的手册。本课程的目的不仅仅是要告诉你如何使用系统API以及库函数实现需要的功能，更重要的是在Linux/Unix平台上的开发习惯，开发方式，设计思想。
+
 ### Linux平台简介与回顾
 
 Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在此领域占有绝对的优势，而这种优势来自于Linux的高效设计，Linux继承自Unix禅宗般的简洁设计哲学，并且由于Linux是开源的，可以自由传播和使用。当然，使用Linux是需要付出一些努力的，需要一些时间去理解。当一旦能够熟练使用，就能够体会到Linux/Unix的强大，并且在其他领域也会有很好的帮助。
@@ -12,9 +14,11 @@ Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在
 
 本课程主要使用C语言，并且使用gcc编译工具。辅助使用shell脚本等其他脚本语言。Web的内容要用到前端（HTML，CSS，JS）以及后台语言PHP/Python，都是简单的示例，目的在于说明运行原理。
 
+虽然本课程使用C实现相应的功能，但是理解了系统API的工作方式，使用一些高级语言如Java，Python等调用系统相关接口会更加得心应手，因为高级语言的接口都依赖于系统底层的实现。
+
 ### 计算机体系相关说明以及课程定位
 
-整个计算机领域从大方向划分，可分为硬件和软件，然而在硬件和软件对接的领域，比如编写设备驱动程序，程序和硬件耦合非常紧密，程序要针对不同硬件平台进行设计，而硬件的设计也会随着软件开发需求而变化。
+整个计算机领域从大方向划分，可分为硬件和软件，然而在硬件和软件对接的领域，比如编写设备驱动程序，程序和硬件耦合非常紧密，程序要针对不同硬件平台进行设计，而硬件的设计也会随着软件开发需求而变化。嵌入式也是一个需要软硬件结合的领域，嵌入式可以很简单，比如电梯控制，也可以很复杂，像火星探测器，据说好奇号火星探测器超过300万行代码，使用C语言编写，测试脚本使用的Python。
 
 我们的专业属于纯粹的软件领域，不会直接和硬件打交道，当然如果能理解计算机硬件的基本运行原理对编写软件会很有帮助，但是这并不是一个十分必要的技能。
 
@@ -22,7 +26,7 @@ Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在
 
 再比如Redis、Memcached等这些中间件服务程序，作为内存型数据库用于数据快速存取，并且Redis还可作为消息队列使用。这些程序都是使用C语言开发的，并且都提供在Linux平台上版本，Linux提供了epoll函数实现了IO多路复用，Redis基于此开发，所以性能非常高。而Windows上并未开放类似的接口。其他提供服务的程序：Nginx，Apache等都是用C语言开发的，Nginx同样是基于Linux 的epoll接口实现了高并发的处理。当然这些程序还要基于很多Linux系统提供的API。
 
-通常的开发多数都是拿来主义，把别人的拿过来使用，开源软件多大部分开发人员和公司来说真是一个福利，能节省不少成本，真要是自己写一套出来，甚至都不知道从何入手。
+通常的开发多数都是拿来主义，把别人的拿过来使用，开源软件多大部分开发人员和公司来说真是一个福利，能节省不少成本，要是自己写一套出来，甚至都不知道从何入手。
 
 本课程会对这些技术依赖的底层系统调用以及运行机制使用程序示例做一个简要说明。如果你感兴趣，可以看看《Linux system programming》以及《Advanced Programming in the UNIX Environment》（《Unix环境高级编程》）。
 
@@ -35,3 +39,22 @@ Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在
 学生要具备C语言基础，Linux系统基础，最好能理解基本的数据结构和算法，一台能够运行Linux环境的设备，建议使用物理机安装Linux系统，虚拟机环境也可以。
 
 本节课主要任务就是安装Linux操作系统，并且安装gcc以及vim，可以使用桌面版本Linux，并且可以使用visual studio code、sublime text 3等桌面环境的开发工具。（visual studio code不是visual studio，是微软提供的一个免费的代码编辑器，支持Linux版本）
+
+### Linux发行版
+
+#### deepin
+
+deepin是国内开发的一个Linux发行版，可以称得上的最好看的发行版，在国外也有很多的用户使用量。桌面环境是完全自主研发的，没有使用gnome，kde等进行二次开发，使用体验会更好。并且提供了一些其他桌面环境没有的工具。deepin开发公司购买了crossover版权，这样你无需付费就可以使用crossover运行Windows程序。另一个比较好的体验是deepin的联机文档很多是翻译成中文的。deepin经过了很多年的发展，综合使用体验deepin对国内来说绝对是最好的。
+
+#### Mint
+
+这个版本在使用排名上一直稳居第一，Mint有一个基于gnome3的桌面环境cinnamon。除此以外，还提供Mate桌面版本以及Xfce桌面版本。Mint主要针对新手，大众用户做了很多设计。实际上对开发人员来说也是非常好的选择。Mint基于Ubuntu进行开发，但是提供了更好的用户使用体验。
+
+#### Ubuntu
+
+Ubuntu上手方便，很多开发要用到的环境都是配置好的，Ubuntu的桌面版本比较激进，追求软件、内核的最新版本。不过UbuntuServer版本部署在服务器上还是很稳定的。Ubuntu基于Debian开发，并针对用户体验做了优化，Ubuntu是公司运营的，会有一些商业相关的预装软件，不过可以卸载。曾经Ubuntu基于gnome开发了自己的桌面环境unity，从Ubuntu18.04开始，使用gnome3作为默认桌面环境，放弃了unity。我个人使用经验，Ubuntu的桌面体验不如deepin和Mint，使用UbuntuServer作为服务器还是可以的。
+
+#### Debian
+
+社区驱动的Linux发行版，Debian是绝对开源的发行版，不会有任何的商业成分。Debian是一个社区开发的版本，没有公司去运营。但是很多发行版都直接或间接基于Debian。使用Debian需要一些更多的设置，不过当前Debian也针对用户的使用体验做了很多工作，对语言的支持也更完善。
+
