--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -22,7 +22,7 @@ Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在
 
 我们的专业属于纯粹的软件领域，不会直接和硬件打交道，当然如果能理解计算机硬件的基本运行原理对编写软件会很有帮助，但是这并不是一个十分必要的技能。
 
-本课程除了可以让你更好的理解Linux运行原理、提高基础语言的编程能力以外，对后续的课程以及工作也 ‘可能’ 会有所帮助，注意为什么用可能这个词，因为在实际的工作场景你不一定会涉及到相对底层的开发，比如我们都会使用PHP/Python/JS等高级语言做一些开发，但是像PHP/Python等高级语言都支持C扩展，而且有些扩展为了运行效率必须要使用C开发。可是多数情况下我们是不需要自己去写C扩展的。
+本课程除了可以让你更好的理解Linux运行原理、提高基础语言的编程能力以外，对后续的课程以及工作也 ‘可能’ 会有所帮助，注意为什么用可能这个词，因为在实际的工作场景你不一定会涉及到相对底层的开发，比如我们都会使用PHP/Python/JavaScript等高级语言做一些开发，但是像PHP/Python等高级语言都支持C扩展，而且有些扩展为了运行效率必须要使用C开发。可是多数情况下我们是不需要自己去写C扩展的。
 
 再比如Redis、Memcached等这些中间件服务程序，作为内存型数据库用于数据快速存取，并且Redis还可作为消息队列使用。这些程序都是使用C语言开发的，并且都提供在Linux平台上版本，Linux提供了epoll函数实现了IO多路复用，Redis基于此开发，所以性能非常高。而Windows上并未开放类似的接口。其他提供服务的程序：Nginx，Apache等都是用C语言开发的，Nginx同样是基于Linux 的epoll接口实现了高并发的处理。当然这些程序还要基于很多Linux系统提供的API。
 
@@ -48,7 +48,7 @@ deepin是国内开发的一个Linux发行版，可以称得上的最好看的发
 
 #### Mint
 
-这个版本在使用排名上一直稳居第一，Mint有一个基于gnome3的桌面环境cinnamon。除此以外，还提供Mate桌面版本以及Xfce桌面版本。Mint主要针对新手，大众用户做了很多设计。实际上对开发人员来说也是非常好的选择。Mint基于Ubuntu进行开发，但是提供了更好的用户使用体验。
+这个版本在使用排名上一直稳居第一，Mint有一个基于gnome3开发的桌面环境cinnamon。除此以外，还提供Mate桌面版本以及Xfce桌面版本。Mint主要针对Linux新手，普通用户做了很多设计。实际上对开发人员来说也是非常好的选择。Mint基于Ubuntu进行开发，但是提供了更好的用户体验。
 
 #### Ubuntu
 
