--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -40,25 +40,33 @@ Linux平台在服务器市场以及嵌入式市场获得了巨大生命力，在
 
 #### deepin
 
-deepin是国内开发的一个Linux发行版，可以称得上桌面环境最好看的发行版，在国外也有很多的用户使用量。桌面环境是完全自主研发的，没有使用gnome，kde等进行二次开发，使用体验会更好。并且提供了一些其他桌面环境没有的工具。deepin开发公司购买了crossover版权，这样你无需付费就可以使用crossover运行Windows程序。另一个比较好的体验是deepin的联机文档很多是翻译成中文的。deepin经过了很多年的发展，综合使用体验deepin对国内来说绝对是最好的。
+deepin是国内开发的一个Linux发行版，可以称得上桌面环境最好看的发行版，在国外也有很多的用户使用量。桌面环境是完全自主研发的，没有使用gnome，kde等进行二次开发，使用体验会更好。并且提供了一些其他桌面环境没有的工具。deepin开发公司购买了crossover版权，这样你无需付费就可以使用crossover运行Windows程序。另一个比较好的体验是deepin的联机文档很多是翻译成中文的。deepin经过了很多年的发展，综合使用体验deepin对国内来说是最好的。
 
 #### Mint
 
-这个版本在使用排名上一直稳居第一，Mint有一个基于gnome3开发的桌面环境cinnamon。除此以外，还提供Mate桌面版本以及Xfce桌面版本。Mint主要针对Linux新手，普通用户做了很多设计。实际上对开发人员来说也是非常好的选择。Mint基于Ubuntu进行开发，但是提供了更好的用户体验。
+这个版本在使用排名上一直稳居第一（现在Mint排名居于第二，第一名被Manjaro抢占），Mint有一个基于gnome3开发的桌面环境cinnamon。除此以外，还提供Mate桌面版本以及Xfce桌面版本。Mint主要针对Linux新手，普通用户做了很多设计。实际上对开发人员来说也是非常好的选择。Mint基于Ubuntu进行开发，但是桌面环境更好用一点。
 
 #### Ubuntu
 
-Ubuntu上手方便，很多开发要用到的环境都是配置好的，Ubuntu的桌面版本比较激进，追求软件、内核的最新版本。不过UbuntuServer版本部署在服务器上还是很稳定的。Ubuntu基于Debian开发，并针对用户体验做了优化，Ubuntu是公司运营的，会有一些商业相关的预装软件，不过可以卸载。曾经Ubuntu基于gnome开发了自己的桌面环境unity，从Ubuntu18.04开始，使用gnome3作为默认桌面环境，放弃了unity。我个人使用经验，Ubuntu的桌面体验不如deepin和Mint，使用UbuntuServer作为服务器还是可以的。
+Ubuntu上手方便，很多开发要用到的环境都是配置好的，Ubuntu的桌面版本比较激进，追求软件、内核的最新版本。不过UbuntuServer版本部署在服务器上还是很稳定的。Ubuntu基于Debian开发，并针对用户体验做了优化，Ubuntu是公司运营的，会有一些商业相关的预装软件，不过可以卸载。曾经Ubuntu基于gnome开发了自己的桌面环境unity，从Ubuntu18.04开始，使用gnome3作为默认桌面环境，放弃了unity。Ubuntu的特点就是上手更容易，集成的开发库也比较全面，尤其是基于Debian的包管理非常方便，软件库也比较全。
 
 #### Debian
 
-社区驱动的Linux发行版，Debian是绝对开源的发行版，不会有任何的商业成分。Debian是一个社区开发的版本，没有公司去运营。但是很多发行版都直接或间接基于Debian。使用Debian需要一些更多的设置，不过当前Debian也针对用户的使用体验做了很多工作，对语言的支持也更完善。
+社区驱动的Linux发行版，Debian是绝对开源的发行版，不会有任何的商业成分。Debian是一个社区开发的版本，没有公司去运营。但是很多发行版都直接或间接基于Debian。使用Debian需要一些更多的设置，不过当前Debian也针对用户的使用体验做了很多工作，对语言的支持也更完善。但是软件的更新程度不像Ubuntu，比较慢，甚至有时候很长时间不更新，往往需要手动更新。
+
+#### CentOS
+
+RedHat发布的开源版本，国内使用很多，软件更新慢，追求稳定，多用于部署服务器。不过现在使用Ubuntu/Debian部署的服务器也在增加。CentOS和RetHat使用相同的包管理程序。尽管你在网上会找到很多为何多数使用CentOS部署服务器的说明，但是那些都是个人之见，因素使多种多样的，当你想部署服务的时候，Ubuntu，Debian，CentOS都是很好的选择。
+
+#### Manjaro
+
+从发布以来，排名一直上升，现在居于第一。基于Arch开发，Arch虽然功能强大，但是需要大量配置，不是很好用。并且不适合新手。所以才有了manjaro项目，融合Arch的优势，同时提供更好用的桌面环境。
+
+！2018年8月28日，测试发现很多发行版都出现了无法引导的问题，据其他人反应，很多人都出现了这个问题，据说是最新的系统启动程序存在bug。目前我个人使用来看，Ubuntu16.04，18.04都可以正常使用，CentOS7也没有问题。
 
 
 
-如果你使用物理机安装，或者你使用虚拟机并且笔记本电脑配置非常高，推荐deepin，deepin的界面相对其他桌面环境负载要高一点。
-
-虚拟机运行Mint桌面环境会进入软件渲染模式，界面很卡。使用虚拟机运行服务器版本，推荐UbuntuServer，最新版本为UbuntuServer18.04。
+如果你使用虚拟机运行Mint桌面环境会进入软件渲染模式，界面很卡，可以尝试其他发行版，根据配置信息可以选择桌面版还是Server版。
 
 
 
